# Machine-Learning-Labs-Questions

./: README.md  lab_2.ipynb  pyproject.toml
lab_1/: lab1.ipynb  lab1_solution.ipynb  lab_1.ipynb
lab_2/: exercises.md  lab_2.ipynb
lab_3/: ionosphere.txt  lab_3.ipynb
lab_4/: lab_4.ipynb
lab_5/: lab_5.ipynb
lab_6/: lab_6.ipynb
lab_7/: lab_7.ipynb
lab_8/: lab_8.ipynb
week_1/: lab1.ipynb  lab1_solution.ipynb
